# adabot04-gz

./: .gitignore  README.md  build_plugins.sh  notes.md  run.sh  run_world.bash  setup_env.bash  setup_env.sh
controller/: CMakeLists.txt  README  build.sh  controller.cc  controller_plugin.cc  run.sh
controller/plugin/: CMakeLists.txt  controller_plugin.cc  make.sh
models/terrain/: model.config  model.sdf
models/terrain-dirt/: model.config  model.sdf
models/terrain-dirt-high/: model.config  model.sdf
models/terrain-dirt-low/: model.config  model.sdf
models/terrain-dirt-med/: model.config  model.sdf
models/terrain-grass-high/: model.config  model.sdf
models/terrain-grass-low/: model.config  model.sdf
models/terrain-grass-med/: model.config  model.sdf
models/terrain-rgb/: model.config  model.sdf
models/ugv/: erb2sdf.sh  model-joints.sdf.erb  model.config  model.sdf  model.sdf.erb
models/ugv-rb/: erb2sdf.sh  model.config  model.sdf  model.sdf.erb
notebooks/: create_heightmaps.ipynb  create_texture.ipynb
plugins/fsm_controller/: CMakeLists.txt  build.sh  fsm_controller.cc
plugins/keyboard_controller/: CMakeLists.txt  keyboard_controller.cc
plugins/keyboard_gui/: CMakeLists.txt  KeyboardGUIPlugin-FIXED.cc  README.md
recorder/: build.sh  run.sh  saving-images.txt
worlds/: empty-rb.world  empty.world  heightmap-dirt-high.world  heightmap-dirt-low.world  heightmap-dirt-med.world  heightmap-dirt.world  heightmap-grass-high.world  heightmap-grass-low.world  heightmap-grass-med.world  heightmap-rgb.world  test_heightmap.world
(+1 files in other folders)
